--- a/744Project/Views/Stores/Delete.cshtml
+++ b/744Project/Views/Stores/Delete.cshtml
@@ -27,6 +27,14 @@
             @Html.DisplayFor(model => model.storeName)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.storeWeight)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.storeWeight)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
