--- a/744Project/Views/Stores/Details.cshtml
+++ b/744Project/Views/Stores/Details.cshtml
@@ -26,6 +26,14 @@
             @Html.DisplayFor(model => model.storeName)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.storeWeight)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.storeWeight)
+        </dd>
+
     </dl>
 </div>
 <p>
