First Working Demo

--- a/744Project/Views/Home/Index.cshtml
+++ b/744Project/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="jumbotron">
     <h1>Team Saturn</h1>
-    <p class="lead">Check out the Stores tab. Login is messy.</p>
+    <p class="lead">Store Display, Login, Logout</p>
 </div>
