--- a/744Project/Views/Shared/_Layout.cshtml
+++ b/744Project/Views/Shared/_Layout.cshtml
@@ -22,11 +22,15 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-					@if (User.Identity.IsAuthenticated)
-					{
+                    @if (User.Identity.IsAuthenticated)
+    {
 
-						<li>@Html.ActionLink("Stores", "Index", "Stores")</li>
-					}
+                <li>@Html.ActionLink("Stores", "Index", "Stores")</li>
+                <li>@Html.ActionLink("Accounts", "Index", "Accounts")</li>
+                //The 2 lines below are just to view the pages, and will be deleted later:
+                <li>@Html.ActionLink("CreditCards", "Index", "CreditCards")</li>
+                <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
+}
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
