--- a/744Project/Views/Network/Index.cshtml
+++ b/744Project/Views/Network/Index.cshtml
@@ -1,33 +1,86 @@
 ﻿@model IEnumerable<_744Project.Models.Relay>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Network";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.relayName)
-        </th>
-        <th></th>
-    </tr>
+<h2>Network</h2>
+<script src="@Url.Content("~/Scripts/cytoscape.js")" type="text/javascript"></script>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.relayName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.relayID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.relayID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.relayID })
-        </td>
-    </tr>
+<div class="" id="cy" style="width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0px;
+        left: 0px;">
+
+</div>
+
+
+
+@section Scripts{
+
+<script>
+	var cy = cytoscape({
+		container: document.getElementById('cy'),
+		style: [
+			{
+				selector: 'node',
+				style: {
+					shape: 'hexagon',
+					'background-color': 'red',
+					label: 'data(id)'
+				}
+			}],
+		layout: {
+			name: 'grid'
+		},
+		elements: [
+			// nodes
+			{ data: { id: 'a' } },
+			{ data: { id: 'b' } },
+			{ data: { id: 'c' } },
+			{ data: { id: 'd' } },
+			{ data: { id: 'e' } },
+			{ data: { id: 'f' } },
+			// edges
+			{
+				data: {
+					id: 'ab',
+					source: 'a',
+					target: 'b'
+				}
+			},
+			{
+				data: {
+					id: 'cd',
+					source: 'c',
+					target: 'd'
+				}
+			},
+			{
+				data: {
+					id: 'ef',
+					source: 'e',
+					target: 'f'
+				}
+			},
+			{
+				data: {
+					id: 'ac',
+					source: 'a',
+					target: 'd'
+				}
+			},
+			{
+				data: {
+					id: 'be',
+					source: 'b',
+					target: 'e'
+				}
+			}
+		]
+	});	
+
+</script>
 }
-
-</table>
