Finished Internal Network Model and updated Relay to Relay connections (models and migration)

--- a/744Project/Views/Network/Index.cshtml
+++ b/744Project/Views/Network/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<_744Project.Models.Relay>
+﻿@model _744Project.ViewModels.NetworkViewModel
 
 @{
     ViewBag.Title = "Network";
