--- a/744Project/Views/Home/Index.cshtml
+++ b/744Project/Views/Home/Index.cshtml
@@ -2,7 +2,15 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>Team Saturn</h1>
-    <p class="lead">Store Display, Login, Logout</p>
+<div class="jumbotron" style="opacity: 0.95;border: 2px solid gray;
+		border-radius: 5px;
+		background-color:white;">
+    <h1>Network Communication Platform</h1>
+    <p class="lead">Team Saturn. Demo 2</p>
 </div>
+
+<style type="text/css">
+	body {
+		background-image: url(../../stock-internet.jpg);
+	}
+</style>
