--- a/744Project/Views/Network/Index.cshtml
+++ b/744Project/Views/Network/Index.cshtml
@@ -5,18 +5,65 @@
 }
 
 
-<h2>Network</h2>
 <script src="@Url.Content("~/Scripts/cytoscape.js")" type="text/javascript"></script>
 
-<div class="" id="cy" style="width: 100%;
-        height: 100%;
+<div class="row">
+	<div style="width: 80%;
+        height: 10%;
         position: absolute;
-        top: 0px;
-        left: 0px;">
+        top: 8%;
+        left: 10%;
+		border: 2px solid gray;
+		border-radius: 5px;
+		background-color:white;
+	 ">
+		<div class="col-sm-4">
+		</div>
+		<div class="col-sm-4">
+			<h3 style="text-align: center;vertical-align: middle;">Network Layout</h3>
+		</div>
+		<div class="col-sm-4" style=" display: flex; align-items: center; justify-content: center;">
+			<input id="clickMe"   style="display: block; margin-top: 10px;" class="btn btn-default" type="button" value="Save Configuration" onclick="exportPositions();" />
+		</div>
 
+		</div>
+	<div class="" id="cy" style="width: 80%;
+        height: 60%;
+        position: absolute;
+        top: 20%;
+        left: 10%;
+		border: 2px solid gray;
+		border-radius: 5px;
+		background-color:white;
+	 ">
+	</div>
+
+	<div style="width: 80%;
+        height: 5%;
+        position: absolute;
+        top: 82%;
+        left: 10%;
+		border: 2px solid gray;
+		border-radius: 5px;
+		background-color:white;">
+		<div class="col-sm-4" style="color:Red;text-align: center;vertical-align: middle; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">
+			Processing Center
+		</div>
+		<div class="col-sm-4" style="color:Blue;text-align: center;vertical-align: middle; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">
+			Relay
+		</div>
+		<div class="col-sm-4" style="color:Yellow;text-align: center;vertical-align: middle; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">
+			Store
+		</div>
+	</div>
 </div>
 
-
+<style type="text/css">
+	body {
+		background-image: url(../../stock-internet.jpg);
+	}
+	
+</style>
 
 
 
