finished lock out funciton. cannot attempt to log in over three times

--- a/744Project/Views/Shared/_Layout.cshtml
+++ b/744Project/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     {
 
 				<li>@Html.ActionLink("Network","Index","Network")</li>
-                <!--<li>@Html.ActionLink("Stores", "Index", "Stores")</li>-->
+                <li>@Html.ActionLink("Stores", "Index", "Stores")</li>
                 <li>@Html.ActionLink("Accounts", "Index", "Accounts")</li>
                 //The 2 lines below are just to view the pages, and will be deleted later:
                 <li>@Html.ActionLink("CreditCards", "Index", "CreditCards")</li>
