--- a/744Project/Views/Account/Register.cshtml
+++ b/744Project/Views/Account/Register.cshtml
@@ -30,6 +30,18 @@
         </div>
     </div>
     <div class="form-group">
+            @Html.LabelFor(m => m.questions, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(m => m.questions, ViewData["SecurityQuestion"] as IEnumerable<SelectListItem>)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.AnswerToSecurityQuestion, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.AnswerToSecurityQuestion, new { @class = "form-control" })
+            </div>
+        </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
